--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -141,7 +141,7 @@
 
 <% end %>
 <script>
- document.addEventListener("DOMContentLoaded", function () {
+ document.addEventListener("turbo:load", () => {
     var oeuvreYearInput = document.getElementById("date-oeuvre-input");
     var oeuvreYearError = document.getElementById("date-oeuvre-error");
 
@@ -178,7 +178,7 @@
   });
 </script>
 <script>
- document.addEventListener("DOMContentLoaded", function () {
+ document.addEventListener("turbo:load", () => {
     // Configuration pour les designers
     $('.designer-select').select2({
       placeholder: "Rechercher un/une designer...",
