--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -306,7 +306,7 @@ document.addEventListener("turbo:load", function () {
 
 </script>
 <script>
-document.addEventListener("DOMContentLoaded", function () {
+document.addEventListener("turbo:load", () => {
   const applyDateFilterBtn = document.getElementById("applyDateFilter");
   const filterForm = document.getElementById("filterForm");
 
