--- a/app/views/designers/edit.html.erb
+++ b/app/views/designers/edit.html.erb
@@ -17,7 +17,7 @@
 </section>
 </div>
 <script>
-  document.addEventListener("DOMContentLoaded", function () {
+  document.addEventListener("turbo:load", () => {
     let currentStep = 1;
     const steps = document.querySelectorAll(".form-step");
 
