--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 // Recherche
 
 input.search-top-bar {
@@ -10,7 +10,7 @@ input.search-top-bar {
   height: 55px;
   border: none;
   position: relative;
-  background: url('/assets/search-icon.svg') no-repeat left 20px center;
+  background: url("/assets/search-icon.svg") no-repeat left 20px center;
   background-size: 16px 16px;
 }
 
@@ -18,7 +18,7 @@ input.search-top-bar::placeholder {
   color: $primary-color;
 }
 
-input[type=search] {
+input[type="search"] {
   margin-right: 16px;
 }
 
@@ -47,14 +47,14 @@ input[type="search"]::-webkit-search-cancel-button {
   appearance: none;
 }
 
-@media screen and (min-width:769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   input.search-top-bar {
     font-size: 16px;
     height: 50px;
   }
 }
 
-@media screen and (min-width:426px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   input.search-top-bar {
     font-size: 14px;
     height: 50px;
@@ -62,36 +62,33 @@ input[type="search"]::-webkit-search-cancel-button {
   }
 }
 
-@media screen and (min-width:0px) and (max-width: 425px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   input.search-top-bar {
     font-size: 14px;
     height: 50px;
     width: 55vw;
   }
-
 }
 
 .field {
   width: 100%;
 }
 
-input[type=text],
-input[type=date],
-input[type=email],
-input[type=password] {
+input[type="text"],
+input[type="date"],
+input[type="email"],
+input[type="password"] {
   border: none;
   stroke: none;
   padding: 0 25px;
   width: calc(100% - 56px);
   height: 70px;
   border-radius: 5px;
-  border: 2px solid #E9E9E9;
+  border: 2px solid #e9e9e9;
   font-weight: 500;
 }
 
-
-@media screen and (min-width:769px) and (max-width: 1024px) {
-
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   select {
     width: calc(50vw + 30px);
   }
@@ -101,7 +98,6 @@ input[type=password] {
   }
 }
 
-
 select {
   width: 100%;
   border: none;
@@ -109,7 +105,7 @@ select {
   padding: 0 25px;
   height: 70px;
   border-radius: 5px;
-  border: 2px solid #E9E9E9;
+  border: 2px solid #e9e9e9;
   font-weight: 500;
 }
 
@@ -117,24 +113,21 @@ select {
   width: 100% !important;
 }
 
-
 /* Forcer la hauteur du champ */
 .select2-container .select2-selection--single {
   padding-left: 25px !important;
-  height: 60px !important;
+  height: 55px !important;
   /* Fixe la hauteur */
   line-height: 70px !important;
   /* Centre verticalement le texte */
   display: flex !important;
-  ;
   /* Assure un alignement flexible */
   align-items: center !important;
-  ;
   /* Aligne verticalement le contenu */
 }
 
 .select2-container .select2-results__option {
-  padding: 10px !important
+  padding: 10px !important;
 }
 
 .select2-container .select2-selection__placeholder {
@@ -148,7 +141,7 @@ textarea {
   width: 100%;
   height: 120px;
   resize: none;
-  border: 2px solid #E9E9E9;
+  border: 2px solid #e9e9e9;
   border-radius: 5px;
 }
 
@@ -166,14 +159,13 @@ textarea {
   color: $secondary-color;
 }
 
-@media screen and (min-width:601px) and (max-width: 768px) {
-
-  input[type=text],
-  input[type=date],
-  input[type=email],
-  input[type=password] {
+@media screen and (min-width: 601px) and (max-width: 768px) {
+  input[type="text"],
+  input[type="date"],
+  input[type="email"],
+  input[type="password"] {
     padding: 0 15px;
-   width: calc(100% - 36px);
+    width: calc(100% - 36px);
     &::placeholder {
       font-size: 15px;
     }
@@ -200,12 +192,11 @@ textarea {
   }
 }
 
-@media screen and (min-width:376px) and (max-width: 600px) {
-
-  input[type=text],
-  input[type=date],
-  input[type=email],
-  input[type=password] {
+@media screen and (min-width: 376px) and (max-width: 600px) {
+  input[type="text"],
+  input[type="date"],
+  input[type="email"],
+  input[type="password"] {
     padding: 0 15px;
     width: calc(100% - 36px);
     height: 60px;
@@ -240,12 +231,11 @@ textarea {
 }
 
 @media screen and (max-width: 375px) {
-
-  input[type=text],
-  input[type=date],
-  input[type=email],
-  input[type=password] {
-padding: 0 15px;
+  input[type="text"],
+  input[type="date"],
+  input[type="email"],
+  input[type="password"] {
+    padding: 0 15px;
     width: calc(100% - 36px);
     height: 55px;
     font-size: 14px;
@@ -267,7 +257,7 @@ padding: 0 15px;
   }
 
   textarea {
-padding: 0 15px;
+    padding: 0 15px;
     width: calc(100% - 36px);
     height: 120px;
     font-size: 14px;
@@ -285,16 +275,15 @@ padding: 0 15px;
   object-fit: cover;
 }
 
-
 input.search-top-bar {
   background-color: $secondary-color;
   color: $primary-color;
 }
 
-input[type=text],
-input[type=date],
-input[type=email],
-input[type=password],
+input[type="text"],
+input[type="date"],
+input[type="email"],
+input[type="password"],
 .select2-container .select2-selection__placeholder {
   background-color: $secondary-color !important;
   color: $primary-color !important;
@@ -316,8 +305,6 @@ textarea {
   color: $text-color;
 }
 
-
-
 body.dark-mode {
   input.search-top-bar {
     background-color: $secondary-color-dark;
@@ -325,10 +312,10 @@ body.dark-mode {
     border-color: $background-color-dark;
   }
 
-  input[type=text],
-  input[type=date],
-  input[type=email],
-  input[type=password],
+  input[type="text"],
+  input[type="date"],
+  input[type="email"],
+  input[type="password"],
   .select2-container .select2-selection__placeholder {
     background-color: $secondary-color-dark !important;
     color: $primary-color-dark !important;
@@ -351,5 +338,4 @@ body.dark-mode {
     background-color: $secondary-color-dark;
     border-color: $background-color-dark;
   }
-
 }
