--- a/app/assets/stylesheets/pages/_searchpage.scss
+++ b/app/assets/stylesheets/pages/_searchpage.scss
@@ -42,7 +42,8 @@
   align-items: center;
 }
 
-.suggestion-item:hover {
+.suggestion-item:hover,
+.active-suggestion {
   background-color: #f9f9f9;
 }
 
@@ -112,10 +113,6 @@
   gap: 16px;
 }
 
-.filter {
-  flex: 1 1 240px;
-}
-
 .flex-category,
 .flex-container {
   display: flex;
@@ -146,7 +143,7 @@
 .select2-container .select2-selection {
   border-radius: 4px !important;
   border: 2px solid #e9e9e9 !important;
-  padding: 8px;
+  padding: 10px !important;
 }
 
 .select2-search__field {
@@ -161,6 +158,9 @@
   font-weight: 500;
 }
 
+.select2-container--default .select2-search--inline .select2-search__field {
+  margin: 0 !important;
+}
 /* Style du dropdown Select2 */
 .select2-dropdown {
   margin-top: 5px !important;
@@ -406,8 +406,7 @@
   }
 
   .filter {
-    width: 100%;
-    flex: 1 1 40px;
+    width: 100% !important;
   }
 
   .dropdown-menu {
@@ -477,8 +476,7 @@
   }
 
   .filter {
-    width: 100%;
-    flex: 1 1 40px;
+    width: 100% !important;
   }
 
   .dropdown-menu {
@@ -536,7 +534,7 @@
   // filtres
 
   .filter {
-    width: 30%;
+    width: 30% !important;
   }
 
   .dropdown-menu {
@@ -760,9 +758,13 @@
 
 // Filter frise
 .filter {
+  width: 16vw;
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+.filter .select2 {
+  height: 55px !important;
 }
 
 .filter-box {
