--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 
 .header-desktop {
   overflow-x: hidden;
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .header-desktop ::-webkit-scrollbar {
@@ -28,7 +28,6 @@
 .header-desktop ::-webkit-scrollbar-thumb:hover {
   background: #363636;
 }
-
 
 // Logo
 .first-content-header {
@@ -57,8 +56,7 @@
 
 // Navigation
 
-
-.header-desktop  ul {
+.header-desktop ul {
   display: flex;
   flex-direction: column;
   gap: 28px;
@@ -73,15 +71,25 @@
   transition: opacity 0.3s ease;
 
   &:hover {
+    color: #3c3c3c;
     opacity: 0.8;
+    svg path {
+      fill: #3c3c3c;
+    }
+  }
+  &:active {
+    color: #1b1b1b;
+    svg path {
+      fill: #1b1b1b;
+    }
   }
 }
 
-.header-desktop  li a svg {
+.header-desktop li a svg {
   scale: 0.9;
 }
 
-.header-desktop  li .active {
+.header-desktop li .active {
   font-size: 1.2rem;
   font-weight: 600;
 }
@@ -115,7 +123,7 @@
 
 /* Petit desktop */
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
-  .header-desktop  {
+  .header-desktop {
     width: 30vw;
     height: 100vh;
     padding: 0 4vw;
@@ -154,7 +162,7 @@
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-  .header-desktop  {
+  .header-desktop {
     width: 30vw;
     height: 100vh;
     padding: 0 2vw;
@@ -307,7 +315,6 @@
   }
 }
 
-
 header {
   background-color: $secondary-color;
 }
@@ -344,7 +351,6 @@ body.dark-mode {
   .logo-header svg path {
     fill: $primary-color-dark;
   }
-
 
   .name-header {
     color: $primary-color-dark;
