--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 
 #oeuvres {
   transition: transform 0.5s ease-in-out;
@@ -19,28 +19,43 @@
   gap: 8px;
 }
 
-.nav-home-mobile {
+.switch-home-mobile {
   display: none;
 }
 
-.nav-home {
+.switch-home {
   position: fixed;
   z-index: 99;
-  margin-top: 132px;
+  margin-top: 116px;
+  padding: 6px;
+  background-color: $secondary-color;
+  border: 2px solid #e9e9e9;
+  border-radius: 50px;
+  display: flex;
+  gap: 4px;
 
   .active {
+    border-radius: 50px;
     font-weight: 500;
-    text-decoration: underline;
+    background-color: $primary-color;
+    color: $secondary-color;
   }
 }
 
-.nav-home a {
-  font-size: 20px;
+.switch-home a {
+  font-size: 18px;
+  padding: 11px 22px;
+  color: $primary-color;
 
   &:hover {
     cursor: pointer;
-    font-weight: 500;
-    text-decoration: underline;
+    border-radius: 50px;
+    color: $secondary-color;
+    background-color: #3c3c3c;
+  }
+
+  &:active {
+    background-color: #1b1b1b;
   }
 }
 
@@ -60,8 +75,7 @@
   cursor: pointer;
 }
 
-@media screen and (min-width:769px) and (max-width: 1024px) {
-
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .nav-home a {
     font-size: 18px;
   }
@@ -71,9 +85,9 @@
   }
 }
 
-@media screen and (min-width:601px) and (max-width:768px) {
+@media screen and (min-width: 601px) and (max-width: 768px) {
   .nav-home-mobile {
-    background-color: #F7F7F7;
+    background-color: #f7f7f7;
     display: flex;
     width: 100vw;
     align-items: center;
@@ -83,31 +97,48 @@
     z-index: 9999;
     height: 90px;
   }
+  .nav-home-mobile svg {
+    scale: 2;
+  }
 
+  .switch-home-mobile {
+    padding: 6px;
+    background-color: $secondary-color;
+    border: 2px solid #e9e9e9;
+    border-radius: 50px;
+    display: flex;
+    gap: 4px;
+
+    .active {
+      border-radius: 50px;
+      font-weight: 500;
+      background-color: $primary-color;
+      color: $secondary-color;
+    }
+  }
+
+  .switch-home-mobile a {
+    font-size: 18px;
+    padding: 11px 22px;
+    color: $primary-color;
+
+    &:hover {
+      cursor: pointer;
+      border-radius: 50px;
+      color: $secondary-color;
+      background-color: #3c3c3c;
+    }
+
+    &:active {
+      background-color: #1b1b1b;
+    }
+  }
   .logo-img {
     width: 40px;
     height: 40px;
   }
 
-  .nav-home-mobile a {
-    font-size: 18px;
-    color: $primary-color;
-  }
-
-  .nav-home-mobile a:hover {
-    cursor: pointer;
-    font-weight: 500;
-  }
-
-  .nav-home-mobile .active {
-    font-weight: 500;
-  }
-
-  .nav-home-mobile svg {
-    scale: 2;
-  }
-
-  .nav-home {
+  .switch-home {
     display: none;
   }
 
@@ -118,12 +149,11 @@
   .button-nav {
     display: none;
   }
-
 }
 
-@media screen and (min-width:426px) and (max-width:600px) {
+@media screen and (min-width: 426px) and (max-width: 600px) {
   .nav-home-mobile {
-    background-color: #F7F7F7;
+    background-color: #f7f7f7;
     display: flex;
     width: 100vw;
     align-items: center;
@@ -134,30 +164,47 @@
     height: 80px;
   }
 
+  .nav-home-mobile svg {
+    scale: 1.6;
+  }
+  .switch-home-mobile {
+    padding: 6px;
+    background-color: $secondary-color;
+    border: 2px solid #e9e9e9;
+    border-radius: 50px;
+    display: flex;
+    gap: 4px;
+
+    .active {
+      border-radius: 50px;
+      font-weight: 500;
+      background-color: $primary-color;
+      color: $secondary-color;
+    }
+  }
+
+  .switch-home-mobile a {
+    font-size: 16px;
+    padding: 10px 20px;
+    color: $primary-color;
+
+    &:hover {
+      cursor: pointer;
+      border-radius: 50px;
+      color: $secondary-color;
+      background-color: #3c3c3c;
+    }
+
+    &:active {
+      background-color: #1b1b1b;
+    }
+  }
   .logo-img {
     width: 35px;
     height: 35px;
   }
 
-  .nav-home-mobile a {
-    color: $primary-color;
-    font-size: 17px;
-  }
-
-  .nav-home-mobile a:hover {
-    cursor: pointer;
-    font-weight: 500;
-  }
-
-  .nav-home-mobile .active {
-    font-weight: 500;
-  }
-
-  .nav-home-mobile svg {
-    scale: 1.6;
-  }
-
-  .nav-home {
+  .switch-home {
     display: none;
   }
 
@@ -168,12 +215,11 @@
   .button-nav {
     display: none;
   }
-
 }
 
-@media screen and (min-width:0px) and (max-width:425px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .nav-home-mobile {
-    background-color: #F7F7F7;
+    background-color: #f7f7f7;
     display: flex;
     width: 100vw;
     align-items: center;
@@ -183,30 +229,49 @@
     z-index: 9999;
     height: 70px;
   }
+  .nav-home-mobile svg {
+    scale: 1.4;
+  }
+
+  .switch-home-mobile {
+    padding: 5px;
+    background-color: $secondary-color;
+    border: 2px solid #e9e9e9;
+    border-radius: 50px;
+    display: flex;
+    gap: 4px;
+
+    .active {
+      border-radius: 50px;
+      font-weight: 500;
+      background-color: $primary-color;
+      color: $secondary-color;
+    }
+  }
+
+  .switch-home-mobile a {
+    font-size: 16px;
+    padding: 8px 20px;
+    color: $primary-color;
+
+    &:hover {
+      cursor: pointer;
+      border-radius: 50px;
+      color: $secondary-color;
+      background-color: #3c3c3c;
+    }
+
+    &:active {
+      background-color: #1b1b1b;
+    }
+  }
 
   .logo-img {
     width: 35px;
     height: 35px;
   }
 
-  .nav-home-mobile a {
-    color: $primary-color;
-  }
-
-  .nav-home-mobile a:hover {
-    cursor: pointer;
-    font-weight: 500;
-  }
-
-  .nav-home-mobile .active {
-    font-weight: 500;
-  }
-
-  .nav-home-mobile svg {
-    scale: 1.4;
-  }
-
-  .nav-home {
+  .switch-home {
     display: none;
   }
 
@@ -217,9 +282,7 @@
   .button-nav {
     display: none;
   }
-
 }
-
 
 // @media (prefers-color-scheme: dark) {
 //   .nav-home a {
